; ModuleID = '/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-import-dump.c_log_2ints.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-import-dump.c_log_2ints.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_user_generic = type { i64, i64, i64, i32 }

@user_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @log_2ints(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.lev_user_generic*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = call %struct.lev_user_generic* @write_alloc(i32 16)
  store %struct.lev_user_generic* %8, %struct.lev_user_generic** %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load %struct.lev_user_generic*, %struct.lev_user_generic** %7, align 8
  %11 = getelementptr inbounds %struct.lev_user_generic, %struct.lev_user_generic* %10, i32 0, i32 0
  store i64 %9, i64* %11, align 8
  %12 = load i32, i32* @user_id, align 4
  %13 = load %struct.lev_user_generic*, %struct.lev_user_generic** %7, align 8
  %14 = getelementptr inbounds %struct.lev_user_generic, %struct.lev_user_generic* %13, i32 0, i32 3
  store i32 %12, i32* %14, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.lev_user_generic*, %struct.lev_user_generic** %7, align 8
  %17 = getelementptr inbounds %struct.lev_user_generic, %struct.lev_user_generic* %16, i32 0, i32 1
  store i64 %15, i64* %17, align 8
  %18 = load i64, i64* %6, align 8
  %19 = load %struct.lev_user_generic*, %struct.lev_user_generic** %7, align 8
  %20 = getelementptr inbounds %struct.lev_user_generic, %struct.lev_user_generic* %19, i32 0, i32 2
  store i64 %18, i64* %20, align 8
  ret void
}

declare dso_local %struct.lev_user_generic* @write_alloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
